<resources>
    <string name="app_name">ProjectExercises</string>
    <string name="api_key">MiBw1C2wSGHYq92H60JRA8UpW</string>
    <string name="api_secret">R06ABmooIafaNdQy1OIzPHfzrKTuRU8iXc4sxHbq874kaKU83A</string>
    <string name="yes">はい</string>
    <string name="cancel">キャンセル</string>
    <string name="dialog_message_confirmation_save_image">この画像を保存しました</string>
    <string name="login">login</string>
    <string name="action_settings">設定</string>
    <string name="text_save_button">保存</string>
    <string name="text_action_compo">動作</string>
    <string name="dialog_message_confirmation_delete_user">このユーザーを削除しますか？</string>
    <string name="text_action_conf_button">アクション</string>
    <string name="text_tweet_additional_acquisition">確認なしに更にツイートを追加取得</string>
    <string name="sleepless">スリープにしない</string>
    <string name="text_layout_compo">レイアウト</string>
    <string name="text_choose_theme_button">テーマ</string>
    <string name="text_choose_char_size_button">文字の大きさ</string>
    <string name="text_license_compo">ライセンス</string>
    <string name="text_license">LICENCE</string>
    <string name="text_add_button1">追加</string>
    <string name="text_add_button2">追加認証</string>
    <string name="description_tweet_button">ツイートアクティビティに飛ぶ</string>
    <string name="description_send_tweet">ツイートを行う</string>
    <string name="text_tweet_button">ツイート</string>
    <string name="text_add_image_button">画像</string>
    <string name="text_choose_user_button">ユーザー</string>
    <string name="description_imageIcon">ユーザーのアイコン</string>
    <string name="description_protected_image">鍵付きユーザーか否か</string>
    <string name="bio_text">BIO</string>
    <string name="location">location</string>
    <string name="text_tweet_tab">ツイート</string>
    <string name="text_favorite_tab">お気に入り</string>
    <string name="text_follow_tab">フォロー</string>
    <string name="text_follower_tab">フォロワー</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="text_button_delete">削除</string>
    <string name="description_favorite">お気に入りか否か</string>
    <string name="right_press">右押し</string>
    <string name="center_press">中押し</string>
    <string name="left_press">左押し</string>
    <string name="right_press_long">右長押し</string>
    <string name="center_press_long">中長押し</string>
    <string name="left_press_long">左長押し</string>
    <string name="use_high_resolution_icon">高解像度のアイコンを使う</string>
    <string name="use_fast_scroll">高速スクロールを使う</string>
    <string name="enable_image_thumb">画像のサムネイルを表示する</string>
    <string name="enable_tweet_internal_link">TLのツイート内のリンクを有効にする</string>
    <string name="display_tweet_internal_buttons">TLのツイートにボタンを表示</string>
    <string name="search">検索</string>
    <string name="DM">DM</string>
    <string name="home">Home</string>
    <string name="setting_color">色設定</string>
    <string name="account">アカウント</string>
    <string name="tweetsview_manage">tweetsView管理</string>
    <string name="api_confirmation">APIの確認</string>
    <string name="authentication">認証</string>
    <string name="block">ブロック</string>
    <string name="mute">ミュート</string>
    <string name="report_spam">スパム報告</string>
    <string name="tweet_search">ツイート検索</string>
    <string name="tweet_search_query_hint">ハッシュタグ、検索ワード</string>
    <string name="select_user_to_search">検索を行うユーザーを選択</string>
    <string name="follow_request">フォローリクエスト</string>
    <string name="dialog_message_confirmation_more_read_tweet">更にツイートを読み込みますか？</string>
    <string name="dialog_message_confirmation_more_read_user">更にユーザーを読み込みますか？</string>
    <string name="dialog_message_confirmation_user_block">このユーザーをブロックしますか？</string>
    <string name="dialog_message_confirmation_user_unmute">このユーザーをミュート解除しますか？</string>
    <string name="dialog_message_confirmation_user_unblock">このユーザーをブロック解除しますか？</string>
    <string name="dialog_message_confirmation_user_mute">このユーザーをミュートしますか？</string>
    <string name="dialog_message_confirmation_user_spam">このユーザーをスパム報告しますか？</string>
    <string name="dialog_message_confirmation_tweet_favorite">このツイートをお気に入り登録しますか？</string>
    <string name="dialog_message_confirmation_tweet_retweet">このツイートをRTしますか？</string>
    <string name="dialog_message_confirmation_tweet_unfavorite">このツイートをお気に入りから解除しますか？</string>
    <string name="dialog_message_confirmation_tweet_unretweet">このツイートをRT解除しますか？</string>
    <string name="dialog_message_confirmation_tweet_delete">このツイートを削除しますか？</string>
    <string name="share">共有</string>
    <string name="can_not_be_retweet_protected_user">非公開ユーザーのツイートはRTできません</string>
    <string name="can_not_be_quote_retweet_protected_user">非公開ユーザーのツイートは引用RTできません</string>
    <string name="follow_request_short">フォロリク</string>
    <string name="do_follow">フォローする</string>
    <string name="do_unfollow">フォロー解除</string>
    <string name="mutual">相互</string>
    <string name="unrequited">片思い</string>
    <string name="their_direction">片思われ</string>
    <string name="blocking">ブロック中</string>
    <string name="indifference">無関心</string>
    <string name="muting">ミュート中</string>
    <string name="me">自分</string>
    <string name="dialog_message_choose_tweet_user">ツイートするユーザーを選択してください</string>
    <string name="dialog_title_choose_tweets_view_type">追加するTweetsViewのタイプを選択してください</string>
    <string name="dialog_title_choose_user">ユーザーを選択してください</string>
    <string name="info_no_tweets_to_read_was">読み込めるツイートはありませんでした</string>
    <string name="info_can_not_add_image_four_or_more">添付できる画像は4つまでです。</string>
    <string name="dialog_message_remove_append_image">この画像を投稿予定から除外しますか？</string>
    <string name="dialog_title_choose_list">リストを選んでください</string>
    <string name="add_home">Home +</string>
    <string name="add_mentions">Mentions +</string>
    <string name="add_list">List +</string>
    <string name="open_user_link">ユーザーのリンクを開く</string>
    <string name="info_blocked">ブロックしました</string>
    <string name="info_unblocked">ブロックを解除しました</string>
    <string name="info_muted">ミュートしました</string>
    <string name="info_unmuted">ミュートを解除しました</string>
    <string name="info_reported_spam">スパム報告しました</string>
    <string name="info_tweets_view_management_tutorial">メニュ-> TweetsView管理 からカラムを追加できます</string>
    <string name="show_conversation">会話を表示</string>
    <string name="info_retweet">さんがリツイートしました</string>
    <string name="dialog_message_confirm_choose_item_home">選択したビューをホームに設定しますか？</string>
    <string name="info_saved">保存しました</string>
    <string name="max_tweet_length">140</string>
    <string name="licenses">権利表記</string>
</resources>
