<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/configView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:paddingEnd="0dp"
                android:paddingStart="3dp"
                android:text="@string/text_action_compo" />

            <Button
                android:id="@+id/open_action_menu_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_trans_dark"
                android:gravity="start|center_vertical"
                android:paddingEnd="0dp"
                android:paddingStart="8dp"
                android:text="@string/text_action_conf_button"
                android:textSize="13.5sp" />

            <LinearLayout
                android:id="@+id/action_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/right_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_light"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/right_press"
                    android:textSize="13.5sp" />

                <Button
                    android:id="@+id/center_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_dark"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/center_press"
                    android:textSize="13.5sp" />

                <Button
                    android:id="@+id/left_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_light"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/left_press"
                    android:textSize="13.5sp" />

                <Button
                    android:id="@+id/right_long_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_dark"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/right_press_long"
                    android:textSize="13.5sp" />

                <Button
                    android:id="@+id/center_long_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_light"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/center_press_long"
                    android:textSize="13.5sp" />

                <Button
                    android:id="@+id/left_long_tap_conf_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/button_trans_dark"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="16dp"
                    android:text="@string/left_press_long"
                    android:textSize="13.5sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tweet_additional_acquisition_flag_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/transparency"
                    android:gravity="start|center_vertical"
                    android:paddingEnd="0dp"
                    android:paddingStart="5dp"
                    android:text="@string/text_tweet_additional_acquisition"
                    android:textColor="#000000"
                    android:textSize="13.5sp" />

                <CheckBox
                    android:id="@+id/confirmation_less_get_tweet_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/sleepless_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/sleepless"
                    android:textColor="#000000"
                    android:textSize="13.5sp" />

                <CheckBox
                    android:id="@+id/sleepless_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_trans_light"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/use_high_resolutionIcon_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/use_high_resolution_icon"
                    android:textColor="#000000"
                    android:textSize="13.5sp" />

                <CheckBox
                    android:id="@+id/use_high_resolution_icon_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button"
                android:orientation="horizontal"
                android:paddingEnd="0dp"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/fast_scroll_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/use_fast_scroll"
                    android:textColor="#000000"
                    android:textSize="13.5sp" />

                <CheckBox
                    android:id="@+id/fast_scroll_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0" />

            </LinearLayout>






        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingEnd="0dp"
                android:paddingStart="3dp"
                android:text="@string/text_layout_compo" />


            <Button
                android:id="@+id/choose_char_size_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_trans_light"
                android:gravity="start|center_vertical"
                android:longClickable="false"
                android:paddingEnd="0dp"
                android:paddingStart="8dp"
                android:text="@string/text_choose_char_size_button"
                android:textSize="13.5sp" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>